--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -821,12 +821,12 @@ body .change-theme {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo semi-transparente */
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .overlay.open {
     display: block;
-    z-index: 99998; /* Coloca a div acima de outras */
+    z-index: 99998;
 }
 
 #badge-xtremepush {
@@ -836,12 +836,12 @@ body .change-theme {
     border-radius: 50%;
     position: absolute;
     transform: translate(50%, -50%);
-    display: none; /* Inicialmente oculto */
+    display: none;
 }
 
-/* Estilo para mostrar o badge */
+
 #badge-xtremepush.show-badge {
-    display: block; /* Mostrar o badge */
+    display: block;
 }
 
 .btn-xtremepush {
@@ -850,8 +850,8 @@ body .change-theme {
 }
 
 .xtremepush-notification-item {
-    border-bottom: 1px solid #ccc; /* Adiciona uma linha divisória entre os cards */
-    padding-bottom: 10px; /* Adiciona espaço entre os cards */
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
 }
 
 
