--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -173,3 +173,90 @@ iframe{
         height: 100%;
     }
 }
+
+
+.overlay {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin-top: 11em;
+}
+
+.overlay .overlay-background {
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    height: calc(100% - 80px);
+    position: absolute;
+    top: 40px;
+    width: 100%
+}
+
+.overlay .overlay-content {
+
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: rgba(0,0,0,.7) radial-gradient(38.32% 50% at 50% 50%,transparent 0,#000 100%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    z-index: 1
+}
+
+.overlay .overlay-content__title {
+    -webkit-text-fill-color: #35cd96;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+    background: -webkit-gradient(linear,left top,left bottom,from(#35cd96),to(#35cd96));
+    background: linear-gradient(180deg,#35cd96,#35cd96);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: #35cd96;
+
+    font-size: 40px;
+    line-height: 40px;
+    margin: 0;
+    text-transform: uppercase
+}
+
+.overlay .overlay-content__text {
+    -webkit-text-fill-color: #fff;
+    color: #fff;
+    font-family: roboto-regular-webfont,sans-serif;
+    font-size: 18px;
+    line-height: 25px;
+    margin: 5px 0 0;
+    padding-left: 10px;
+    padding-right: 10px
+}
+
+.inline-button {
+    display: inline-block;
+    margin: 5px; /* Espaço entre os botões */
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+
+
