--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -14,7 +14,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="title">Escolha to Sorteio</div>
+                            <div class="title">Escolha o Sorteio</div>
                             <div class="description">
                                 <p>Escolha o prêmio que gostaria de concorrer, verifique a descrição, regulamento do sorteio e fotos em caso de dúvidas entre em contato com o administrador.</p>
                             </div>
