fix: authentication in the customer deposit route

--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <img class="logo-modal" [src]="LOGO" alt="">
-    <a type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+    <a type="button" class="btn-close" aria-label="Close" (click)="toClose()">
         <i class="fa fa-times"></i>
     </a>
 </div>
