--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -713,7 +713,7 @@ body .change-theme {
     left: -300px;
     width: 300px;
     height: 100%;
-    background-color: var(--foreground-highlight);
+    background-color: var(--background);
     border-right: 1px solid var(--highlight);
     padding: 10px;
     box-sizing: border-box;
