feat: adicionando mensagens quando não há jogos disponíveis na home

--- a/src/app/home/widgets/cassino/cassino.component.css
+++ b/src/app/home/widgets/cassino/cassino.component.css
@@ -75,6 +75,11 @@
     opacity: 0;
 }
 
+.empty-game-list {
+    color: var(--foreground-header);
+    opacity: 0.5;
+}
+
 @keyframes surgirAnim {
     0% {
         opacity: 0;
