--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
@@ -270,6 +270,13 @@ span.escudo img {
     border-radius: 5px;
 }
 
+.empty-league-list {
+    color: var(--foreground-header);
+    opacity: 0.5;
+    margin-top: 8px;
+    display: flex;
+}
+
 @media only screen and (max-width: 1024px) {
     .slider-header {
         padding: 0 0 10px;
