--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -147,23 +147,13 @@
                                                 / {{'saques.monthlyMaximum' | translate}}: {{valorMaxSaqueMensal | currency}}
                                             </div>
                                             <div class="shortcut-amounts">
-                                                <button type="button" class="btn" (click)="changeAmount(10)">
-                                                    {{10 | currency}}
-                                                </button>
-                                                <button type="button" class="btn" (click)="changeAmount(20)">
-                                                    {{20 | currency}}
-                                                </button>
-                                                <button type="button" class="btn" (click)="changeAmount(50)">
-                                                    {{50 | currency}}
-                                                </button>
-                                                <button type="button" class="btn" (click)="changeAmount(75)">
-                                                    {{75 | currency}}
-                                                </button>
-                                                <button type="button" class="btn" (click)="changeAmount(100)">
-                                                    {{100 | currency}}
-                                                </button>
-                                                <button type="button" class="btn" (click)="changeAmount(200)">
-                                                    {{200 | currency}}
+                                                <button
+                                                    *ngFor="let value of valuesShortcuts"
+                                                    type="button"
+                                                    class="btn"
+                                                    (click)="changeAmount(value)"
+                                                >
+                                                    +{{ value }}
                                                 </button>
                                             </div>
                                         </div>
