--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -184,6 +184,7 @@ nav::-webkit-scrollbar {
 
 .dropdown-menu-custom {
     inset: 0 0 auto auto !important;
+    z-index: 1002;
 }
 
 .language-dropdown .flag-icon {
