Ajuste Rifa  * ajuste da tela de boas vindas

--- a/src/app/shared/layout/welcome-page/welcome-page.component.html
+++ b/src/app/shared/layout/welcome-page/welcome-page.component.html
@@ -15,7 +15,7 @@
                         de ganhar bônus de 100% no seu primeiro depósito</p>
                 </ng-container>
                 <ng-container *ngIf="!booleanPromoPrimeiroDepositoAtivo">
-                    <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Não perca tempo! Realize agora mesmo seu primeiro depósito e compre sua rifa.</p>
+                    <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Não perca tempo! Realize agora mesmo seu primeiro depósito e compre seu bilhete.</p>
                 </ng-container>
             </div>
             <ng-template #textValid>
@@ -31,7 +31,7 @@
             </ng-template>
         </div>
         <div class="tutorial-title" style="margin-bottom: 32px;">
-            <p>Comece a apostar em apenas 3 passos</p>
+            <p>Comece a ajudar e a dar chance para sua sorte em 3 passos.</p>
         </div>
         <div class="container-instructions">
             <div class="box" *ngIf="!validEmail; else validacao">
@@ -70,7 +70,7 @@
                     </svg>
                 </div>
                 <p class="tutorial-title">3. E pronto!</p>
-                <p class="tutorial-body">Agora é só aproveitar o que a nossa banca tem de melhor a oferecer</p>
+                <p class="tutorial-body">Agora é só aproveitar, escolher o sorteio e BOA SORTE!</p>
             </div>
         </div>
     </section>
