--- a/src/app/shared/layout/welcome-page/welcome-page.component.html
+++ b/src/app/shared/layout/welcome-page/welcome-page.component.html
@@ -14,9 +14,9 @@
                     <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Faça seu depósito agora mesmo e não perca a oportunidade 
                         de ganhar bônus de 100% no seu primeiro depósito</p>
                 </ng-container>
-                <ng-container *ngIf="!booleanPromoPrimeiroDepositoAtivo">
+                <ng-container *ngIf="booleanPromoPrimeiroDepositoAtivo">
                     <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Não perca tempo! Realize agora mesmo seu primeiro depósito 
-                        e comece a desfrutar do que a nossa banca tem de melhor a oferecer.</p>
+                        e comece a desfrutar do que a nossa casa de apostas tem de melhor a oferecer.</p>
                 </ng-container>
             </div>
             <ng-template #textValid>
@@ -71,7 +71,7 @@
                     </svg>
                 </div>
                 <p class="tutorial-title">3. E pronto!</p>
-                <p class="tutorial-body">Agora é só aproveitar o que a nossa banca tem de melhor a oferecer</p>
+                <p class="tutorial-body">Agora é só aproveitar o que a nossa casa de apostas tem de melhor a oferecer</p>
             </div>
         </div>
     </section>
