Revert "Modificação no texto da welcome-page"
This reverts commit 9eda20bb2ea0ecf57e87d987dc18f11599be3687.

--- a/src/app/shared/layout/welcome-page/welcome-page.component.html
+++ b/src/app/shared/layout/welcome-page/welcome-page.component.html
@@ -14,7 +14,7 @@
                     <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Faça seu depósito agora mesmo e não perca a oportunidade 
                         de ganhar bônus de 100% no seu primeiro depósito</p>
                 </ng-container>
-                <ng-container *ngIf="!booleanPromoPrimeiroDepositoAtivo">
+                <ng-container *ngIf="booleanPromoPrimeiroDepositoAtivo">
                     <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Não perca tempo! Realize agora mesmo seu primeiro depósito 
                         e comece a desfrutar do que a nossa casa de apostas tem de melhor a oferecer.</p>
                 </ng-container>
