feat(modal): ajustado o modal de login e registre para ficar sempre em primeiro plano

--- a/src/styles.css
+++ b/src/styles.css
@@ -1730,6 +1730,15 @@ ngb-datepicker-month {
 }
 
 @media only screen and (max-width: 1024px) {
+
+    .modal-login{
+        z-index: 2147483648 !important;
+    }
+
+    .modal-cadastro-cliente{
+        z-index: 2147483648 !important;
+    }
+
     *::-webkit-scrollbar{
         display: none;
     }
