conversei com tawan e ele falou que não estava mais utilizando esse formatar nome jogo cassino quando o jogo fosse ao vivo, fiz isso porque em alguns jogos da alea o nome do jogo não aparecia da tabela aposta

--- a/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.html
@@ -88,7 +88,7 @@
                     <ng-container *ngFor="let aposta of apostas">
                         <tr class="{{ classNameAposta(aposta) }} mobile-tds">
                             <td class="codigo">{{ aposta.codigo }}</td>
-                            <td *ngIf="tabSelected === 'cassino'">{{ aposta.game | formatarNomeJogoCassino }}</td>
+                            <td *ngIf="tabSelected === 'cassino'">{{ aposta.game}}</td>
                             <td>{{ aposta.valor | currency}}</td>
                             <td *ngIf="tabSelected === 'cassino'">{{ aposta.premio | currency }}</td>
                             <td *ngIf="tabSelected !== 'cassino'" class="acoes-aposta">
