--- a/src/app/home/widgets/cassino/cassino.component.html
+++ b/src/app/home/widgets/cassino/cassino.component.html
@@ -5,7 +5,7 @@
     <div class="bloco" *ngIf="games.length > 0">
         <app-wall-section
             sectionId="cassino"
-            [title]="title ? title : ('geral.cassino' | translate)"
+            [title]="customCasinoName"
             [itemsQty]="games.length"
             [seeAllRouterLink]="linkAll"
             (onLeft)="scrollLeft('cassino')"
